[project]
name = "ascension"
version = "0.1.0"
description = "A supervised contrastive learning framework for image recognition model training"
authors = [
    {name = "Aether Sight", email = "ricterzheng@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
python = ">=3.13"
torch = {version = "2.7.0", source = "pytorch-cu126"}
torchvision = {version = "0.22.0", source = "pytorch-cu126"}
opencv-python = ">=4.5.0"
numpy = ">=1.21.0"
albumentations = ">=1.3.0"
timm = ">=0.9.0"
tqdm = ">=4.60.0"
matplotlib = ">=3.3.0"
